test/good/automatic/base/without_input/ret_zero/0043.lat
// official test 22
int main() {
    int x;
    printInt(x);
    return 0;
}
