test/bad/automatic/extension/class/compile_time/0007.lat
class janusz {
  int barbara() {
    return 5;
  }
}

class andrzej extends janusz {
  int barbara(int x) {
    return x;
  }
}

int main() {
  return 1;
}
